--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Animated Portfolio</title>
     <link rel="icon" href="./images/logo.png" type="image/png" sizes="32x32" />
-    <link rel="stylesheet" type="css" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <!--box icons-->
     <link
