--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
               id="phone"
               name="phone"
               placeholder="Phone Number"
+              maxlength="10"
               required
             />
             <span class="focus"></span>
